# oofem

./: .ast-grep-config.yml  .clang-format  .ctags  .gitignore  .gitmodules  .justfile  .lvimrc  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  ChangeLog  GenerateVersionHeader.cmake  README  README.md  VERSION  codecov.yml  concretedpm.C  config.guess  config.sub  configure  configure.in  do_release  install.sh  makefile.in  pyproject.toml  release_filter.pl  uncrustify.cfg
src/dss/: Array.h  BiSection.cpp  BiSection.h  BigMatrix.cpp  BigMatrix.h  CMakeLists.txt  ColHash.h  ConList.h  DSSAfx.h  DSSolver.cpp  DSSolver.h  DenseMatrix.h  DenseMatrixArithmeticsNN.cpp  DenseMatrixArithmeticsNN.h  IntArrayList.cpp  IntArrayList.h  Makefile  MathTracer.cpp  MathTracer.h  Ordering.h  SkyLineMtx.cpp  SkyLineMtx.h  SkyLineMtxLDL.cpp  SkyLineMtxLDL.h  SparseConectivityMtx.cpp  SparseConectivityMtx.h  SparseConectivityMtxFixed.h  SparseGridColumn.h  SparseGridMtx.cpp  SparseGridMtx.h  SparseGridMtxLDL.cpp  SparseGridMtxLDL.h  SparseGridMtxLL.cpp  SparseGridMtxLL.h  SparseGridMtxLU.cpp  SparseGridMtxLU.h  SparseGridMtxPD.cpp  SparseGridMtxPD.h  SparseMatrixF.cpp  SparseMatrixF.h  (+5 more)
src/fm/: CMakeLists.txt  Makefile  binghamfluid2.C  binghamfluid2.h  cbs.C  cbs.h  cbselement.C  cbselement.h  cmake_install.cmake  fastmarchingmethod.C  fastmarchingmethod.h  fdelement.C  fdelement.h  fe2fluidmaterial.C  fe2fluidmaterial.h  fe2sinteringmaterial.C  fe2sinteringmaterial.h  fluidcrosssection.C  fluidcrosssection.h  fluiddynamicmaterial.C  fluiddynamicmaterial.h  fluidmaterialevaluator.C  fluidmaterialevaluator.h  fluidmodel.C  fluidmodel.h  fmelement.C  fmelement.h  hexa1bubblestokes.C  hexa1bubblestokes.h  hexa21stokes.C  hexa21stokes.h  leplic.C  leplic.h  levelsetpcs.C  levelsetpcs.h  line2boundaryelement.C  line2boundaryelement.h  line2surfacetension.C  line2surfacetension.h  linesurfacetension.C  (+53 more)
src/fm/Materials/: binghamfluid2.C  binghamfluid2.h  fe2fluidmaterial.C  fe2fluidmaterial.h  fluiddynamicmaterial.C  fluiddynamicmaterial.h  newtonianfluid.C  newtonianfluid.h  nonlinearfluidmaterial.C  nonlinearfluidmaterial.h  twofluidmaterial.C  twofluidmaterial.h
src/fm/pfem/: delaunaytriangle.C  delaunaytriangle.h  delaunaytriangulator.C  delaunaytriangulator.h  edge2d.C  edge2d.h  fluidstructureproblem.C  fluidstructureproblem.h  interactionboundarycondition.C  interactionboundarycondition.h  interactionload.C  interactionload.h  interactionpfemparticle.C  interactionpfemparticle.h  octreelocalizert.h  octreelocalizertutil.h  pfem.C  pfem.h  pfemelement.C  pfemelement.h  pfemelement2d.C  pfemelement2d.h  pfemnumberingschemes.C  pfemnumberingschemes.h  pfemparticle.C  pfemparticle.h  tr1_2d_pfem.C  tr1_2d_pfem.h
src/mpm/: CMakeLists.txt  dg.C  dg.h  integral.C  integral.h  mpm.C  mpm.h  mpmproblem.C  mpmproblem.h  mpmsemodels.C  mpmsemodels.h  prototype.C  prototype2.C  prototype2.h  sadg.C  termlibrary.C  termlibrary.h  termlibrary2.C  termlibrary2.h  termlibrary3.C  termlibrary3.h  termlibrary4.C  termlibrary4.h  tm.C  up.C
src/mpm/tools/: sadg3dgen.py
src/oofemlib/: CMakeLists.txt  Makefile  activebc.h  activedof.C  activedof.h  alist.h  appordering.h  assemblercallback.C  assemblercallback.h  baseelement.h  bcgeomtype.h  bctracker.C  bctracker.h  bctype.h  bcvaltype.h  bodyload.C  bodyload.h  boundary.C  boundary.h  boundarycondition.C  boundarycondition.h  boundaryload.C  boundaryload.h  buffereddatareader.C  buffereddatareader.h  calculatorfunction.C  calculatorfunction.h  calmls.C  calmls.h  chartype.h  classfactory.C  classfactory.h  classtype.h  clock.C  clock.h  cltypes.C  cltypes.C.orig  cltypes.h  cmake_install.cmake  column.C  (+713 more)
src/oofemlib/contact/: contactdefinition.C  contactdefinition.h  contactelement.C  contactelement.h  contactmanager.C  contactmanager.h
src/oofemlib/export/: bcexportinterface.C  bcexportinterface.h  exportmodulecallerinterface.C  exportmodulecallerinterface.h
src/oofemlib/iga/: feibspline.C  feibspline.h  feinurbs.C  feinurbs.h  feitspline.C  feitspline.h  iga.C  iga.h  igaelements.C  igaelements.h  planestresselementevaluator.C  planestresselementevaluator.h  space3delementevaluator.C  space3delementevaluator.h  structuralelementevaluator.C  structuralelementevaluator.h
src/oofemlib/iml/: compcol.C  compcol.h  diagpre.C  diagpre.h  dyncompcol.C  dyncompcol.h  dyncomprow.C  dyncomprow.h  icprecond.C  icprecond.h  ilucomprowprecond.C  ilucomprowprecond.h  iluprecond.C  iluprecond.h  iml.h  imlsolver.C  imlsolver.h  precond.C  precond.h  symcompcol.C  symcompcol.h  voidprecond.C  voidprecond.h
src/oofemlib/refman/: doxygen.cfg  intro  mainpage  makefile
src/sm/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  Makefile  abaqususermaterial.C  abaqususermaterial.C.orig  abaqususermaterial.h  adaptlinearstatic.C  adaptlinearstatic.h  adaptnlinearstatic.C  adaptnlinearstatic.h  anisodamagemodel.C  anisodamagemodel.h  anisolinearelasticmaterial.C  axisymm3d.C  axisymm3d.h  b3mat.C  b3mat.h  b3solidmat.C  b3solidmat.h  beam2d.C  beam2d.h  beam3d.C  beam3d.h  bilinearczmaterial.C  bilinearczmaterial.h  bilinearczmaterialFagerstrom.C  bilinearczmaterialFagerstrom.H  bilinearczmaterialFagerstrom.h  bondceb.h  brouzoulisshell.C  brouzoulisshell.h  cct.C  cct.h  cct3d.C  cct3d.h  cebfip78.C  cebfip78.h  cmake_install.cmake  cohint.C  (+548 more)
src/tm/: CMakeLists.txt  Makefile  anisomassmat.C  anisomassmat.h  bazantnajjarmat.C  bazantnajjarmat.h  brick1_ht.C  brick1_ht.h  cmake_install.cmake  darcyflow.C  darcyflow.h  gravitypressure.C  gravitypressure.h  hemobaznajmat.C  hemobaznajmat.h  hemokunzelmat.C  hemokunzelmat.h  hemotkmat.C  hemotkmat.h  hydram.C  hydram.h  hydratingconcretemat.C  hydratingconcretemat.h  hydratinghemomat.C  hydratinghemomat.h  hydratingisoheatmat.C  hydratingisoheatmat.h  isoheatmat.C  isoheatmat.h  isolinmoisturemat.C  isolinmoisturemat.h  isomoisturemat.C  isomoisturemat.h  lattice2d_mt.C  lattice2d_mt.h  latticetransmat.C  latticetransmat.h  latticetransportelement.C  latticetransportelement.h  nlisomoisturemat.C  (+46 more)
(+3645 files in other folders)
